--- a/src/stylesheet/_mixins.scss
+++ b/src/stylesheet/_mixins.scss
@@ -3,3 +3,9 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+@mixin textOverflowEllipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
