--- a/src/stylesheet/_player.scss
+++ b/src/stylesheet/_player.scss
@@ -6,7 +6,7 @@
   height: 76%;
   overflow: hidden;
   position: absolute;
-  width: 30%;
+  width: 28%;
 
   &__nav {
     padding: 30px;
@@ -20,9 +20,10 @@
     padding: 30px;
 
     &-display {
+      align-items: center;
       display: flex;
       justify-content: center;
-      align-items: center;
+      margin-bottom: 30px;
 
       &-thumbnail {
         border-radius: 50%;
@@ -32,6 +33,112 @@
         margin: 0 8%;
         object-fit: cover;
         width: 200px;
+      }
+    }
+
+    &-description {
+      padding: 10px 0;
+      width: 100%;
+
+      &-song {
+        @include textOverflowEllipsis();
+        font-size: 30px;
+        font-weight: 700;
+        margin-bottom: 12px;
+        text-align: center;
+        width: 100%;
+      }
+
+      &-singer {
+        @include textOverflowEllipsis();
+        font-size: 18px;
+        font-weight: 400;
+        text-align: center;
+        width: 100%;
+      }
+    }
+  }
+
+  &__controller {
+    width: 100%;
+    height: 260px;
+    background-color: #ffffff;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    box-shadow: 0px -3px 15px rgba(0, 0, 0, 0.08);
+    position: absolute;
+    bottom: 0;
+    font-size: 15px;
+    font-weight: 500;
+    color: #acb3c3;
+
+    &-time {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      padding: 30px;
+      position: relative;
+      width: 100%;
+
+      &-played,
+      &-end {
+        width: 50%;
+      }
+
+      &-end {
+        text-align: right;
+      }
+
+      &-range {
+        -webkit-appearance: none;
+        height: 3px;
+        margin: 16px 0 0;
+        outline: none;
+        width: 100%;
+
+        &::-webkit-slider-runnable-track {
+          background-color: #f2f2f2;
+          border-radius: 3px;
+          border: none;
+          height: 3px;
+          width: 100%;
+        }
+
+        &::-moz-range-track {
+          background-color: #f2f2f2;
+          border-radius: 3px;
+          border: none;
+          height: 3px;
+          width: 100%;
+        }
+
+        &::-webkit-slider-thumb {
+          -webkit-appearance: none;
+          background: $primary-color;
+          border-radius: 50%;
+          height: 15px;
+          margin-top: -6px;
+          width: 15px;
+        }
+
+        &::-moz-range-thumb {
+          -webkit-appearance: none;
+          background: $primary-color;
+          border-radius: 50%;
+          border: none;
+          height: 15px;
+          margin-top: -6px;
+          width: 15px;
+        }
+      }
+
+      &-progress {
+        background-color: $primary-color;
+        border-radius: 3px;
+        bottom: 3px;
+        height: 3px;
+        position: relative;
+        width: calc(33%);
       }
     }
   }
