--- a/src/stylesheet/_player.scss
+++ b/src/stylesheet/_player.scss
@@ -60,22 +60,21 @@
   }
 
   &__controller {
-    width: 100%;
-    height: 260px;
     background-color: #ffffff;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    box-shadow: 0px -3px 15px rgba(0, 0, 0, 0.08);
-    position: absolute;
     bottom: 0;
+    box-shadow: 0px -3px 15px rgba(0, 0, 0, 0.08);
+    color: #acb3c3;
     font-size: 15px;
     font-weight: 500;
-    color: #acb3c3;
+    height: 260px;
+    position: absolute;
+    width: 100%;
 
     &-time {
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
       padding: 30px;
       position: relative;
       width: 100%;
@@ -139,6 +138,48 @@
         height: 3px;
         position: relative;
         width: calc(33%);
+      }
+    }
+
+    &-buttons {
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+      width: 100%;
+
+      &-btn {
+        align-items: center;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        transition: all 0.2s ease;
+
+        &--large {
+          border-radius: 50%;
+          box-shadow: 0px 0px 30px #f4631d80;
+          height: 100px;
+          margin: 0 50px;
+          width: 100px;
+
+          img {
+            width: 30%;
+          }
+        }
+
+        &--small {
+          border-radius: 50%;
+          height: 70px;
+          width: 70px;
+
+          img {
+            width: 45%;
+          }
+        }
+
+        &:active {
+          transform: scale(0.8);
+        }
       }
     }
   }
