--- a/src/stylesheet/_main_body.scss
+++ b/src/stylesheet/_main_body.scss
@@ -2,6 +2,7 @@ body {
   background-color: $main-body;
   font-family: "Roboto", sans-serif;
   color: $primary-color;
+  user-select: none;
 }
 
 .brandIcon,
