Add on hover animation in thummb of slider

--- a/src/stylesheet/_player.scss
+++ b/src/stylesheet/_player.scss
@@ -99,6 +99,7 @@
           background-color: #f2f2f2;
           border-radius: 3px;
           border: none;
+          cursor: pointer;
           height: 3px;
           width: 100%;
         }
@@ -107,6 +108,7 @@
           background-color: #f2f2f2;
           border-radius: 3px;
           border: none;
+          cursor: pointer;
           height: 3px;
           width: 100%;
         }
@@ -117,7 +119,12 @@
           border-radius: 50%;
           height: 15px;
           margin-top: -6px;
+          transition: all 0.2s ease;
           width: 15px;
+
+          &:hover {
+            transform: scale(1.2);
+          }
         }
 
         &::-moz-range-thumb {
