--- a/src/stylesheet/_player.scss
+++ b/src/stylesheet/_player.scss
@@ -12,12 +12,12 @@
     padding: 30px;
 
     &-logo {
-      width: 20%;
+      width: 120px;
     }
   }
 
   &__info {
-    padding: 30px;
+    padding: 10px 30px 30px;
 
     &-display {
       align-items: center;
@@ -173,7 +173,7 @@
           width: 100px;
 
           img {
-            width: 30%;
+            width: 30px;
           }
         }
 
@@ -183,7 +183,7 @@
           width: 70px;
 
           img {
-            width: 45%;
+            width: 32px;
           }
         }
 
