Remove blue color on touch in phone

--- a/src/stylesheet/_reset.scss
+++ b/src/stylesheet/_reset.scss
@@ -6,3 +6,10 @@ html,
 body {
   margin: 0;
 }
+
+*:active {
+  -webkit-tap-highlight-color: transparent;
+  outline: none;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+}
