Replace button icons with iconfont

--- a/src/stylesheet/index.scss
+++ b/src/stylesheet/index.scss
@@ -1,6 +1,7 @@
 @import "./variables";
 @import "./mixins";
 @import "./fonts";
+@import "./iconFonts.css";
 @import "./reset";
 @import "./main_body";
 @import "./player";
