Add styles for equalizer-bar

--- a/src/stylesheet/_responsive.scss
+++ b/src/stylesheet/_responsive.scss
@@ -27,8 +27,8 @@
         }
 
         &-equalizer {
-          img {
-            width: 40px;
+          &-bar {
+            width: 3px;
           }
         }
       }
