--- a/src/stylesheet/_player.scss
+++ b/src/stylesheet/_player.scss
@@ -39,8 +39,9 @@
           height: 70px;
           margin: 0 1.5px;
           opacity: 0.7;
-          transform: scaleY(1);
-          width: 6px;
+          transform: scaleY(0);
+          transition: all 0.15s linear;
+          width: 4px;
 
           &--inverse {
             background-image: linear-gradient($primary-color, $secondary-color);
@@ -202,8 +203,12 @@
           margin: 0 50px;
           width: 100px;
 
-          img {
-            width: 30px;
+          i {
+            font-size: 30px;
+          }
+
+          .icon-play {
+            margin-left: 6px;
           }
         }
 
@@ -212,13 +217,13 @@
           height: 70px;
           width: 70px;
 
-          img {
-            width: 32px;
+          i {
+            font-size: 22px;
           }
         }
 
         &:active {
-          transform: scale(0.8);
+          transform: scale(0.9);
         }
       }
     }
