Add stylesheet and function for ripple animation

--- a/src/stylesheet/_player.scss
+++ b/src/stylesheet/_player.scss
@@ -194,6 +194,7 @@
         display: flex;
         justify-content: center;
         outline: none;
+        position: relative;
         transition: all 0.2s ease;
 
         &--large {
