--- a/src/stylesheet/index.scss
+++ b/src/stylesheet/index.scss
@@ -4,5 +4,6 @@
 @import "./iconFonts.css";
 @import "./reset";
 @import "./main_body";
+@import "./ripple";
 @import "./player";
 @import "./responsive";
