--- a/src/stylesheet/_player.scss
+++ b/src/stylesheet/_player.scss
@@ -148,7 +148,7 @@
           width: 15px;
 
           &:hover {
-            transform: scale(1.2);
+            transform: scale(1.3);
           }
         }
 
@@ -164,7 +164,7 @@
           width: 15px;
 
           &:hover {
-            transform: scale(1.2);
+            transform: scale(1.4);
           }
         }
       }
@@ -173,9 +173,11 @@
         background-color: $primary-color;
         border-radius: 3px;
         bottom: 3px;
+        cursor: pointer;
         height: 3px;
+        pointer-events: none;
         position: relative;
-        width: calc(33%);
+        width: 1%;
       }
     }
 
